<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.shopmanager.ui.DashboardFragment"
        android:label="@string/dashboard">
        <action
            android:id="@+id/action_dashboard_to_detail"
            app:destination="@id/itemDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/itemsFragment"
        android:name="com.shopmanager.ui.ItemsFragment"
        android:label="@string/items">
        <action
            android:id="@+id/action_items_to_detail"
            app:destination="@id/itemDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_items_to_add"
            app:destination="@id/addEditFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.shopmanager.ui.AddEditFragment"
        android:label="@string/add_item">
        <argument
            android:name="itemId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.shopmanager.ui.ItemDetailFragment"
        android:label="@string/item_details">
        <argument
            android:name="itemId"
            app:argType="long" />
        <action
            android:id="@+id/action_detail_to_edit"
            app:destination="@id/addEditFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_detail_to_sale"
            app:destination="@id/recordSaleFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/salesFragment"
        android:name="com.shopmanager.ui.SalesFragment"
        android:label="@string/sales" />

    <fragment
        android:id="@+id/recordSaleFragment"
        android:name="com.shopmanager.ui.RecordSaleFragment"
        android:label="@string/record_sale">
        <argument
            android:name="itemId"
            app:argType="long" />
    </fragment>
</navigation>
